# st-workshop

./: .gitignore  LICENSE  README.md  build.sbt
haskell/: LICENSE  st-workshop.cabal
haskell/src/: Main.hs
haskell/src/Workshop/: Collections.hs  Randomness.hs  Template.hs
haskell/test/Workshop/: RandomnessSpec.hs
src/main/resources/: application.conf  booze.txt
src/main/scala/org/eigengo/stw/tesco/: api.scala  main.scala  model.scala  offline.scala
tutorial/: collections.md  intro.md  monad-transformers.md  randomness.md  tesco.md  typeclasses.md
